--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "src/sjtu_drone"]
 	path = src/sjtu_drone
 	url = git@github.com:ayushchakra/sjtu_drone.git
+[submodule "src/AprilTag-ROS-2"]
+	path = src/AprilTag-ROS-2
+	url = git@github.com:ayushchakra/AprilTag-ROS-2.git
